去掉rust-toolchain.toml，fj200c串口增加为5路
